# TrechCoatsShopping

./: CMakeLists.txt  in.txt  main.cpp
domain/: TrenchCoats.cpp  TrenchCoats.h
file/: CSVFile.cpp  CSVFile.h  File.cpp  File.h  HTMLFile.cpp  HTMLFile.h
gui/: command.h  commandManager.h  dialog.h  gui.cpp  gui.h  shoppingBasket.h
repository/: repository.cpp  repository.h
service/: service.cpp  service.h
ui/: ui.cpp  ui.h
